clusters/homelab/core/cnpg-system.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
