clusters/homelab/core/kepler.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kepler
  labels:
    pod-security.kubernetes.io/enforce: privileged
