clusters/homelab/core/nginx-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
