clusters/homelab/core/openebs-nfs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openebs-nfs
  labels:
    pod-security.kubernetes.io/enforce: privileged
