clusters/homelab/core/openebs.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openebs
