clusters/homelab/core/spegel.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: spegel
  labels:
    pod-security.kubernetes.io/enforce: privileged
