clusters/homelab/core/tailscale.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale
