clusters/homelab/core/openebs-nfs-storage1-ssd.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openebs-nfs-storage1-ssd
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nfs-server
  namespace: openebs-nfs-storage1-ssd
spec:
  replicas: 1 # NOTE: Must because of RWO
  serviceName: "nfs-storage1-ssd"
  selector:
    matchLabels:
      app: nfs-server
  template:
    metadata:
      labels:
        app: nfs-server
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - storage1
      containers:
      - name: ganesha-nfs
        image: ghcr.io/frzifus/ganesha-nfs:latest
        ports:
        - containerPort: 2049 # NFSv4 default port
          name: nfs
        volumeMounts:
        - name: nfs-data
          mountPath: /export # Mount PVC to export directory
        securityContext:
          privileged: false
      volumes:
        - name: nfs-data
          persistentVolumeClaim:
            claimName: nfs-pv-provisioning
---
kind: Service
apiVersion: v1
metadata:
  name: nfs-server
  namespace: openebs-nfs-storage1-ssd
spec:
  selector:
    app: nfs-server
  clusterIP: 10.109.204.207
  ports:
    - name: nfs
      port: 2049
---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: nfs-openebs-single-replica-ssd-rwx
# spec:
#   persistentVolumeReclaimPolicy: Delete
#   capacity:
#     storage: 500Mi
#   accessModes:
#     - ReadWriteMany
#   nfs:
#     server: 10.109.204.207
#     path: "/"
#   mountOptions:
#     - nfsvers=4.2
